# Cpp

./: .gitignore
C++v20/: concept_hashable.h  coroutines_generator.cpp  ranges_filter_transform.cpp
C++v20/modules/: compile.sh  module_test.cppm  test.cpp
CppCon/CppCon2014/: Modern_Template_Metaprogramming_A_Compendium_Part_1.hpp  Modern_Template_Metaprogramming_A_Compendium_Part_2.hpp
CppCon/CppCon2018/: CopyElision.cpp  MultimapCpp11.cpp
CppCon2014/: Modern_Template_Metaprogramming_A_Compendium_Part_1.hpp  Modern_Template_Metaprogramming_A_Compendium_Part_2.hpp  Walter E. Brown Modern Template Metaprogramming: A Compendium.cpp
GameProgrammingPatterns/command/: command_with_actor.cpp
GameProgrammingPatterns/double_buffer/: double_buffer.cpp  double_buffer_ai.cpp
GameProgrammingPatterns/flyweight/: flyweight_terrain.cpp
GameProgrammingPatterns/game_loop/: game_loop.cpp
GameProgrammingPatterns/observer/: observer.cpp
GameProgrammingPatterns/singleton/: single_instantation_nonpublic_global_access.cpp  singleton_filesystem_classic_approach.cpp
Power_of_2/: power_of_2.h
Software Architecture with C++/concepts/: count_string_view.cpp  free_operator_overload.cpp  liskov_polymorphism.cpp  liskov_variadic_template.cpp
Trivia/: rand.cpp  test.cpp  version.cpp
Trivia/cmake_template/: CMakeLists.txt
Trivia/noob/: algos.cpp  automating_resource_management.cpp  bit_cast_object.cpp  c_pointers.cpp  compile_time_calculations.cpp  endl.cpp  for_loop.cpp  namespace.cpp  (+12 more)
concurrency/: happens_before_malloc_atomic.cpp  memory_order_relaxed.cpp  signaling.cpp
(+47 files in other folders)
